@@ -1,7 +1,6 @@
 package agh.ics.oop.model;
 
 import agh.ics.oop.exceptions.IncorrectPositionException;
-import agh.ics.oop.model.util.MapVisualizer;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -10,37 +9,41 @@ import java.util.stream.Stream;
 public abstract class AbstractWorldMap implements WorldMap {
     protected final Map<Vector2d, List<Animal>> animals = new HashMap<>();
     protected final Map<Vector2d, Grass> grassTufts = new HashMap<>();
+    protected final Map<String, Integer> allGenomes = new HashMap<>();
+
+    private final boolean isAging;
+    protected final int maxNumberOfMutations;
+    protected final int minNumberOfMutations;
+    protected final GrassPlacer grassPlacer;
+    private final UUID id;
 
     protected Vector2d lowerLeft;
     protected Vector2d upperRight;
-    protected final MapVisualizer visualizer;
-    private final List<MapChangeListener> observers = new ArrayList<>();
-    //observers w przyszłości jak WorldElement może mieć różne typy obiektów a implementację MapChangeListener
-    //już w swoich klasach jak Animal i Grass = WorldElement
-    private final UUID id;
-    protected int currentPlantCount;
-    protected int currentAnimalCount;
-    protected int emptyPositionCount;
-    protected List<Integer> theMostPopularGenome;
-    protected double averageAnimalsEnergy;
-    protected int deadAnimalsCount; // N*x + energy) / (N+1)
-    protected double averageDeathAnimalsAgeFromTheStart;
-    protected double averageAliveAnimalsNumberOfChildren;
     protected Vector2d lowerLeftEquatorialForest;
     protected Vector2d upperRightEquatorialForest;
-    protected GrassPlacer grassPlacer;
+    protected int currentPlantCount;
+    protected int currentAnimalsCount;
+    protected int emptyPositionsCount;
+    protected int countOfDeadAnimals;
+    protected String theMostPopularGenome;
+    protected double averageAliveAnimalsEnergy;
+    protected double averageDeadAnimalsAge;
+    protected double averageAliveAnimalsNumberOfChildren = 0;
 
-
-    public AbstractWorldMap(int height, int width, int initialPlantCount, int dailyGrassGrowth, int consumeEnergy) {
+    public AbstractWorldMap(int height, int width, int initialPlantCount, int dailyGrassGrowth,
+                            int consumeEnergy, int maxNumberOfMutations, int minNumberOfMutations,
+                            boolean isAging) {
         this.lowerLeft = new Vector2d(0, 0);
         this.upperRight = new Vector2d(width - 1, height - 1);
-        this.visualizer = new MapVisualizer(this);
+        this.averageDeadAnimalsAge = 0;
+        this.maxNumberOfMutations = maxNumberOfMutations;
+        this.minNumberOfMutations = minNumberOfMutations;
         this.id = UUID.randomUUID();
         this.lowerLeftEquatorialForest = new Vector2d(0, (int) (0.4 * height));
         this.upperRightEquatorialForest = new Vector2d(width - 1, (int) (0.6 * height));
         this.grassPlacer = new GrassPlacer(grassTufts, lowerLeft, upperRight, lowerLeftEquatorialForest, upperRightEquatorialForest,
                 consumeEnergy, dailyGrassGrowth, initialPlantCount);
-
+        this.isAging = isAging;
     }
 
 
@@ -48,24 +51,35 @@ public abstract class AbstractWorldMap implements WorldMap {
     public void place(AbstractAnimal animal) throws IncorrectPositionException {
         if (canMoveTo(animal.getPosition())) {
             addAnimalToMap(animal);
-            mapChanged(String.format("New animal placed at position: %s", animal.getPosition()));
+            currentAnimalsCount++;
+            allGenomes.compute(animal.getGenome().toString(), (key, value) -> value == null ? 1 : value + 1);
         } else {
             throw new IncorrectPositionException(animal.getPosition());
         }
 
     }
 
+
     public void addAnimalToMap(AbstractAnimal animal) {
-        animals.computeIfAbsent(animal.getPosition(), k -> new ArrayList<>()).add((Animal) animal);
-    }
-
-    public void removeAnimalFromMap(Vector2d position, AbstractAnimal animal) {
-        animals.get(position).remove(animal);
-
-        if (animals.get(position).isEmpty()) {
-            animals.remove(position);
+        if (isAging) {
+            animals.computeIfAbsent(animal.getPosition(), k -> new LinkedList<>()).add((OldAgeAnimal) animal);
+        } else {
+            animals.computeIfAbsent(animal.getPosition(), k -> new ArrayList<>()).add((Animal) animal);
         }
     }
+
+
+    protected void removeAnimalFromMap(Vector2d position, AbstractAnimal animal) {
+        if (animal == null)
+            return;
+
+        List<Animal> animalsAtPosition = animals.get(position);
+
+        if (animalsAtPosition != null) {
+            animalsAtPosition.remove((Animal) animal);
+        }
+    }
+
 
     @Override
     public void move(AbstractAnimal animal, MapDirection direction) {
@@ -76,28 +90,37 @@ public abstract class AbstractWorldMap implements WorldMap {
         if (!oldPosition.equals(newPosition)) {
             removeAnimalFromMap(oldPosition, animal);
             addAnimalToMap(animal);
-            mapChanged(String.format("Animal moved from %s to %s", oldPosition, newPosition));
         }
     }
+
 
     @Override
     public boolean isOccupied(Vector2d position) {
         return isOccupiedByAnimal(position) || isOccupiedByGrass(position);
     }
 
+
     @Override
     public boolean isOccupiedByAnimal(Vector2d position) {
         return animals.containsKey(position);
     }
+
 
     @Override
     public boolean isOccupiedByGrass(Vector2d position) {
         return grassTufts.containsKey(position);
     }
 
+
     @Override
-    public List<? extends WorldElement> objectAt(Vector2d position) {
-        return animals.get(position);
+    public WorldElement objectAt(Vector2d position) {
+        if (animals.get(position) == null)
+            return null;
+        Animal objectAtAnimal = animals.get(position).stream()
+                .max(Comparator.comparingInt(Animal::getEnergy))
+                .orElse(null);
+        return objectAtAnimal != null ? objectAtAnimal :
+                (grassTufts.get(position) != null ? grassTufts.get(position) : null);
     }
 
 
@@ -112,6 +135,7 @@ public abstract class AbstractWorldMap implements WorldMap {
         return (position.getX() > upperRight.getX() || position.getX() < lowerLeft.getX());
     }
 
+
     @Override
     public boolean isMovingBeyondBordersVertically(Vector2d position) {
         return (position.getY() > upperRight.getY() || position.getY() < lowerLeft.getY());
@@ -122,14 +146,17 @@ public abstract class AbstractWorldMap implements WorldMap {
         return upperRight;
     }
 
+
     public Vector2d getLowerLeft() {
         return lowerLeft;
     }
+
 
     @Override
     public List<Grass> getAllGrassTufts() {
         return List.copyOf(grassTufts.values());
     }
+
 
     @Override
     public List<Animal> getAllAnimals() {
@@ -138,34 +165,11 @@ public abstract class AbstractWorldMap implements WorldMap {
                 .collect(Collectors.toList());
     }
 
+
     @Override
     public List<WorldElement> getAllWorldElements() {
         return Stream.concat(getAllAnimals().stream(), getAllGrassTufts().stream())
                 .collect(Collectors.toList());
-    }
-
-
-    public void addObserver(MapChangeListener observer) {
-        if (!observers.contains(observer)) {
-            observers.add(observer);
-        }
-    }
-
-    public void removeObserver(MapChangeListener observer) {
-        observers.remove(observer);
-    }
-
-
-    protected void mapChanged(String message) {
-        for (MapChangeListener observer : observers) {
-            observer.mapChanged(this, message);
-        }
-    }
-
-
-    @Override
-    public String toString() {
-        return visualizer.draw(lowerLeft, upperRight);
     }
 
 
@@ -180,75 +184,155 @@ public abstract class AbstractWorldMap implements WorldMap {
         grassPlacer.addGrassTufts();
     }
 
+
     @Override
     public void deleteDeadAnimals() {
+        int previousCountOfDeadAnimals = this.countOfDeadAnimals;
+        int totalDeadAgeToday = 0;
+        List<Animal> animalsToRemove = new LinkedList<>();
         for (List<Animal> animalList : animals.values()) {
-            animalList.removeIf(Animal::hasPassedAway);
-            this.currentAnimalCount--;
+            for (Animal animal : animalList) {
+                if (!animal.hasPassedAway())
+                    continue;
+
+                animalsToRemove.add(animal);
+                this.currentAnimalsCount--;
+                this.countOfDeadAnimals++;
+                totalDeadAgeToday += animal.getNumberOfDaysAlive();
+            }
+        }
+        for (Animal deadAnimal : animalsToRemove)
+            removeAnimalFromMap(deadAnimal.getPosition(), deadAnimal);
+
+        if (countOfDeadAnimals > 0) {
+            averageDeadAnimalsAge = (double) (averageDeadAnimalsAge * previousCountOfDeadAnimals
+                    + totalDeadAgeToday) / countOfDeadAnimals;
         }
     }
 
+
     @Override
     public void updateEaten() {
+        List<Vector2d> tuftsToRemovePositions = new LinkedList<>();
         for (Vector2d grassPosition : grassTufts.keySet()) {
             List<Animal> animalsOnPosition = animals.get(grassPosition);
-            Animal animalWinner = solveConflictsBetweenAnimals(animalsOnPosition);
+            if (animalsOnPosition == null)
+                continue;
+            List<Animal> animalsOnPositionThatMoved = animalsOnPosition.stream()
+                    .filter(Animal::getHasAlreadyMoved)
+                    .toList();
+            if (animalsOnPositionThatMoved.isEmpty()){
+                continue;
+            }
+            Animal animalWinner = solveConflictsBetweenAnimals(animalsOnPositionThatMoved);
+            currentPlantCount -= 1;
             animalWinner.setEnergy(animalWinner.getEnergy() + grassPlacer.consumeEnergy);
+            animalWinner.incrementPlantsConsumed();
+            tuftsToRemovePositions.add(grassPosition);
         }
+
+        for (Vector2d positionToRemove : tuftsToRemovePositions)
+            grassTufts.remove(positionToRemove);
+
+        this.emptyPositionsCount = grassPlacer.findEmptySpots(lowerLeft, upperRight).size();
     }
+
 
     @Override
     public void updateReproduction() {
         Set<Vector2d> positionsWithAnimalAt = animals.keySet();
         for (Vector2d position : positionsWithAnimalAt) {
-            while (true) {
-                List<Animal> animalsOnPosition = animals.get(position);
-                if (animalsOnPosition.size() < 2) {
-                    continue;
-                }
 
-                Animal animalWinner1 = solveConflictsBetweenAnimals(animalsOnPosition);
-                animalsOnPosition.remove(animalWinner1);
-                Animal animalWinner2 = solveConflictsBetweenAnimals(animalsOnPosition);
-                animalsOnPosition.add(animalWinner1);
-
-                if (animalWinner1.getEnergy() < animalWinner1.getEnergyNeededToReproduce() || animalWinner2.getEnergy() < animalWinner2.getEnergyNeededToReproduce()) {
-                    break;
-                }
-
-                addAnimalToMap(reproduceAnimals(animalWinner1, animalWinner2));
+            List<Animal> animalsOnPosition = animals.get(position);
+            if (animalsOnPosition.size() < 2) {
+                continue;
             }
+
+            Animal animalWinner1 = solveConflictsBetweenAnimals(animalsOnPosition);
+            animalsOnPosition.remove(animalWinner1);
+            Animal animalWinner2 = solveConflictsBetweenAnimals(animalsOnPosition);
+            animalsOnPosition.add(animalWinner1);
+
+            if (animalWinner1.isNotReadyToReproduce() || animalWinner2.isNotReadyToReproduce()) {
+                continue;
+            }
+            
+            reproduceAnimals(animalWinner1, animalWinner2);
+            animalWinner1.hasReproduced();
+            animalWinner2.hasReproduced();
         }
     }
 
-    private Animal reproduceAnimals(Animal animalWinner1, Animal animalWinner2) {
-        Genome newGene = new Genome(animalWinner1.getGenome(), animalWinner2.getGenome(), animalWinner1.getEnergy(), animalWinner2.getEnergy());
+
+    private void reproduceAnimals(Animal animalWinner1, Animal animalWinner2) {
+        Genome newGene = new Genome(animalWinner1.getGenome(), animalWinner2.getGenome(),
+                animalWinner1.getEnergy(), animalWinner2.getEnergy(),
+                minNumberOfMutations, maxNumberOfMutations);
 
         MapDirection orientation = MapDirection.randomOrientation();
         int startIndexOfGenome = (int) (Math.random() * animalWinner1.getGenome().getGenes().length);
-        Animal newBornedAnimal = new Animal(animalWinner1.getPosition(), orientation,
-                animalWinner1.getDefaultEnergySpawnedWith(), animalWinner1.getEnergyLossPerDay(),
-                animalWinner1.getEnergyLossPerReproduction(), animalWinner1.getEnergyNeededToReproduce(),
-                animalWinner1.getGenome().getGenes().length, startIndexOfGenome, animalWinner1.getIsAging(), newGene);
+        Animal newBornedAnimal;
+        if(isAging){
+            newBornedAnimal = new OldAgeAnimal(animalWinner1.getPosition(), orientation,
+                    2 * animalWinner1.getEnergyNeededToReproduce(), animalWinner1.getEnergyLossPerDay(),
+                    animalWinner1.getEnergyLossPerReproduction(), animalWinner1.getEnergyNeededToReproduce(),
+                    startIndexOfGenome, newGene);
+        }else{
+            newBornedAnimal = new Animal(animalWinner1.getPosition(), orientation,
+                    2 * animalWinner1.getEnergyNeededToReproduce(), animalWinner1.getEnergyLossPerDay(),
+                    animalWinner1.getEnergyLossPerReproduction(), animalWinner1.getEnergyNeededToReproduce(),
+                    startIndexOfGenome, newGene);
+        }
+
         try {
             place(newBornedAnimal);
         } catch (IncorrectPositionException e) {
             System.out.println("Cannot place the animal: " + e.getMessage());
         }
-        addAnimalToMap(newBornedAnimal);
-        return newBornedAnimal;
+        animalWinner1.addChild(newBornedAnimal);
+        animalWinner2.addChild(newBornedAnimal);
+        updateCountOfChildren(animalWinner1, animalWinner2);
+        updateAverageAliveAnimalsNumberOfChildren();
+    }
+
+
+    public void updateCountOfChildren(Animal animal1, Animal animal2) {
+        animal1.incrementNumberOfChildren();
+        animal2.incrementNumberOfChildren();
+
+    }
+
+
+    @Override
+    public void moveAnimals()
+    {
+        List<Animal> animalsToMove = new LinkedList<>();
+        for (List<Animal> a : animals.values()) {
+            animalsToMove.addAll(a);
+        }
+
+        for (Animal anim : animalsToMove) {
+            anim.setHasAlreadyMoved(false);
+            int direction = anim.getGenome().getGenes()[anim.getCurrentIndexOfGenome()];
+            move(anim, MapDirection.fromNumericValue(direction));
+            anim.incrementIndex();
+        }
+
     }
 
 
     @Override
     public Animal solveConflictsBetweenAnimals(List<Animal> animalsOnPosition) {
-        int maxAnimalEnergy = animalsOnPosition.stream().mapToInt(Animal::getEnergy).max().orElse(-1);
+        int maxAnimalEnergy = animalsOnPosition.stream()
+                .mapToInt(Animal::getEnergy)
+                .max()
+                .orElse(-1);
         List<Animal> strongestAnimals = animalsOnPosition.stream()
                 .filter(animal -> animal.getEnergy() == maxAnimalEnergy)
                 .toList();
 
         if (strongestAnimals.size() == 1) {
-            return strongestAnimals.get(0);
+            return strongestAnimals.getFirst();
         }
 
 
@@ -262,7 +346,7 @@ public abstract class AbstractWorldMap implements WorldMap {
                 .toList();
 
         if (oldestAnimals.size() == 1) {
-            return oldestAnimals.get(0);
+            return oldestAnimals.getFirst();
         }
 
 
@@ -276,10 +360,101 @@ public abstract class AbstractWorldMap implements WorldMap {
                 .toList();
 
         if (mostProlificAnimals.size() == 1) {
-            return mostProlificAnimals.get(0);
+            return mostProlificAnimals.getFirst();
         }
 
+        int randomValue = (int)(Math.random() * mostProlificAnimals.size());
+        return mostProlificAnimals.get(randomValue);
+    }
 
-        return mostProlificAnimals.get((int) (Math.random() * mostProlificAnimals.size()));
+
+    public void updateAverageAliveAnimalsNumberOfChildren() {
+        int currentNumberOfChildren = 0;
+        for (List<Animal> animalList : animals.values()) {
+            for (Animal animal : animalList) {
+                if (animal.hasPassedAway()) {
+                    continue;
+                }
+                currentNumberOfChildren += animal.getNumberOfChildren();
+            }
+        }
+        if (currentAnimalsCount > 0) {
+            averageAliveAnimalsNumberOfChildren = (double) currentNumberOfChildren / currentAnimalsCount;
+        }
+    }
+
+
+    public void updateAverageAliveAnimalsEnergy() {
+        int currentAnimalsEnergy = 0;
+        int todayDied = 0;
+        for (List<Animal> animalList : animals.values()) {
+            for (Animal animal : animalList) {
+                if (animal.hasPassedAway()) {
+                    todayDied++;
+                    continue;
+                }
+                currentAnimalsEnergy += animal.getEnergy();
+            }
+        }
+        if (currentAnimalsCount - todayDied > 0) {
+            averageAliveAnimalsEnergy = (double) currentAnimalsEnergy / (currentAnimalsCount-todayDied);
+        }
+    }
+
+
+    public void updateAnimalsLifespan() {
+        for (List<Animal> animalsOnPosition : animals.values()) {
+            for (Animal animal : animalsOnPosition) {
+                if (!animal.hasPassedAway()) {
+                    animal.incrementNumberOfDaysAlive();
+                }
+            }
+        }
+    }
+
+
+    public void updateMostPopularGenome() {
+        if (allGenomes.isEmpty()) {
+            theMostPopularGenome = "";
+            return;
+        }
+        List<String> sortedGenomes = allGenomes.entrySet().stream()
+                .sorted(Map.Entry.comparingByValue(Comparator.reverseOrder()))
+                .limit(1)
+                .map(Map.Entry::getKey)
+                .toList();
+
+        this.theMostPopularGenome = sortedGenomes.getFirst();
+    }
+
+
+    public String getMostPopularGenome() {
+        return theMostPopularGenome;
+    }
+
+
+    public double getAverageAliveAnimalsEnergy() {
+        updateAverageAliveAnimalsEnergy();
+        return averageAliveAnimalsEnergy;
+    }
+
+
+    public double getAverageDeadAnimalsAge() {
+        return averageDeadAnimalsAge;
+    }
+
+
+    public double getAverageAliveAnimalsNumberOfChildren() {
+        return averageAliveAnimalsNumberOfChildren;
+    }
+
+
+    public int getEmptyPositionsCount() {
+        return emptyPositionsCount;
+    }
+
+    public float getSpecialFieldWeight(Vector2d position) {
+        //Indicates that this field is special
+        return position.precedes(upperRightEquatorialForest) && position.follows(lowerLeftEquatorialForest) ? 0.1f : 0f;
     }
 }
